--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -983,6 +983,7 @@ img.mainImg {
 }
 
 .eventBody, .navBox, .pplBody {
+  animation: 1s ease-in-out 0 1 slidein;
   padding: 2%;
   border: 5px solid #dcf6ff;
   background-color: rgba(63, 68, 82, 0.8392156863);
@@ -1552,6 +1553,75 @@ th {
   .menuContent {
     margin: 18% 48%;
   }
+}
+
+.dashNav {
+  min-height: 100vh;
+  position: fixed;
+  z-index: 200;
+  top: 6%;
+  left: -2%;
+}
+@media (max-width: 768px) {
+  .dashNav {
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    min-height: 0;
+    top: auto;
+    bottom: 0;
+    width: 100%;
+    padding: 2%;
+  }
+}
+
+@keyframes twiddle {
+  0% {
+    transform: translateX(0%);
+  }
+  92% {
+    transform: translateX(-1%);
+  }
+  94% {
+    transform: translateX(1%);
+  }
+  96% {
+    transform: translateX(-1%);
+  }
+  98% {
+    transform: translateX(1%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+.navBut button {
+  transform-style: preserve-3d;
+  animation: 15s ease-in-out 0s infinite twiddle;
+  color: white;
+  background-color: rgba(63, 68, 82, 0.8392156863);
+  font-family: fantasy;
+  margin: 50%;
+  height: 70px;
+  width: 70px;
+  border-radius: 19px;
+}
+@media (max-width: 768px) {
+  .navBut button {
+    margin: 0%;
+  }
+}
+
+#analytics {
+  display: none;
+}
+
+#activity {
+  display: none;
+}
+
+#settings {
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
