--- a/public/stylesheets/w2/style.css
+++ b/public/stylesheets/w2/style.css
@@ -44,23 +44,18 @@
   .imgBox {
     width: 100%;
   }
-
   a {
     font-size: 1em;
   }
-
   p {
     font-size: 1rem;
   }
-
   h1 {
     font-size: 2rem;
   }
-
   h2 {
     font-size: 1.5rem;
   }
-
   .pricing {
     font-size: 2rem;
   }
@@ -69,23 +64,18 @@
   .imgBox {
     width: 100%;
   }
-
   li {
     font-size: 2.6em;
   }
-
   a {
     font-size: 1.1em;
   }
-
   p {
     font-size: 1.7rem;
   }
-
   h1 {
     font-size: 3rem;
   }
-
   h2 {
     font-size: 2rem;
   }
@@ -94,31 +84,24 @@
   .imgBox {
     width: 50%;
   }
-
   li {
     font-size: 1.6em;
   }
-
   a {
     font-size: 1.2em;
   }
-
   p {
     font-size: 1.3rem;
   }
-
   h1 {
     font-size: 2rem;
   }
-
   h2 {
     font-size: 2rem;
   }
-
   .pricing {
     font-size: 2rem;
   }
-
   p {
     text-align: justify;
   }
@@ -127,27 +110,21 @@
   .imgBox {
     width: 50%;
   }
-
   a {
     font-size: 1.2em;
   }
-
   p {
     font-size: 1.5rem;
   }
-
   h1 {
     font-size: 2rem;
   }
-
   h2 {
     font-size: 2rem;
   }
-
   .pricing {
     font-size: 3rem;
   }
-
   p {
     text-align: justify;
   }
@@ -171,7 +148,7 @@
   width: 100vw;
   height: 100vh;
   z-index: 100;
-  background-color: #383842;
+  background-color: rgb(56, 56, 66);
 }
 @media (min-width: 768px) {
   .cart {
@@ -264,6 +241,7 @@ body {
     margin-top: 5%;
   }
 }
+
 .introHead {
   min-width: 100%;
   min-height: 50%;
@@ -319,7 +297,7 @@ body {
 }
 
 span.alert {
-  color: #ff5e00;
+  color: rgb(255, 94, 0);
 }
 
 button {
@@ -937,7 +915,7 @@ input:focus {
 .validateError {
   padding: 0;
   margin: 1%;
-  color: #ff5e00;
+  color: rgb(255, 94, 0);
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   transform-style: preserve-3d;
@@ -1020,7 +998,7 @@ img.mainImg {
 .eventBody, .navBox, .pplBody {
   padding: 2%;
   border: 5px solid #dcf6ff;
-  background-color: #3f4452d6;
+  background-color: rgba(63, 68, 82, 0.8392156863);
 }
 .eventBody_about, .navBox_about, .pplBody_about {
   margin: 5%;
@@ -1043,7 +1021,7 @@ img.mainImg {
   font-size: 3rem;
 }
 .navBox:hover {
-  background-color: #e1a817;
+  background-color: rgb(225, 168, 23);
 }
 
 .imgBox {
