--- a/views/wix-services.ejs
+++ b/views/wix-services.ejs
@@ -1,14 +1,18 @@
-<html lang="en">
+<!DOCTYPE html>
+
 <head>
+  <%- include('config/head.ejs')%>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  <div class="LandingPage">
+  <div class="wixGrid">
   <%for(let i =0;i<data[0].length;i++){%>  
-<div class="eventBody">
+<div class="wixContainer">
 <%=data[0][i].serviceName%>
+$<%=data[0][i].cost%>
+
 </div>
 <%}%>
 </div>
