--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -1624,4 +1624,18 @@ th {
   display: none;
 }
 
+.wixGrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+@media (max-width: 768px) {
+  .wixGrid {
+    grid-template-columns: 1fr;
+  }
+}
+
+.wixContainer {
+  border: 1px solid black;
+}
+
 /*# sourceMappingURL=style.css.map */
