--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -1625,8 +1625,10 @@ th {
 }
 
 .wixGrid {
+  margin: 1px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2px;
 }
 @media (max-width: 768px) {
   .wixGrid {
