--- a/views/wix-services.ejs
+++ b/views/wix-services.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
+<body style="background-color: rgba(0,0,0,0); color: black;">
   <div class="wixGrid">
   <%for(let i =0;i<data[0].length;i++){%>  
 <div class="wixContainer">
