--- a/public/stylesheets/main/style.scss
+++ b/public/stylesheets/main/style.scss
@@ -1019,17 +1019,40 @@ display:none;
   @include dashStyle();
 
 }
-
+//combo righteous kScript
 .wixGrid{
+  border: inset 2px solid black;
   margin: 1px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap:2px;
+  align-items: center;
+  align-content: center;
   @media (max-width:768px) {
     grid-template-columns: 1fr;
     
   }
 }
+
 .wixContainer{
-  border:1px solid black
+  border:1px solid black;
+  h2{
+    font-family: 'kScript';
+  }
+  h1{
+    color: black;
+    font-family: 'righteous';
+  }
+  p{
+    font-family: 'conbo';
+  }
+}
+.wixTitle{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  padding: 1%;
+  background-color: rgba(0, 0, 0, 0.093);
+}
+.titleImg{
+  width:100%
 }
