--- a/views/wix-services.ejs
+++ b/views/wix-services.ejs
@@ -7,11 +7,18 @@
   <title>Document</title>
 </head>
 <body style="background-color: rgba(0,0,0,0); color: black;">
+
   <div class="wixGrid">
-  <%for(let i =0;i<data[0].length;i++){%>  
+    <%for(let i =0;i<data[0].length;i++){%>  
+      <%let svcName = data[0][i].serviceName%>
+      <%let svcNameSlice = svcName.slice(0,12)%>
 <div class="wixContainer">
   <div class="wixTitle">
-<h1><%=data[0][i].serviceName%></h1>
+    <%if(svcName.length>=13){%>
+<h1><%=svcNameSlice%>..</h1>
+<%}else{%>
+<h1><%=svcName%></h1>
+  <%}%>
 <img class="titleImg" src="<%=data[0][i].imgName%>">
 </div>
 <h2>$<%=data[0][i].cost%>.00 | <%=data[0][i].terms%></h2>
