--- a/public/stylesheets/main/style.scss
+++ b/public/stylesheets/main/style.scss
@@ -1040,6 +1040,8 @@ display:none;
     font-family: 'kScript';
   }
   h1{
+    margin: 0;
+    padding: 0;
     color: black;
     font-family: 'righteous';
   }
@@ -1047,11 +1049,20 @@ display:none;
     font-family: 'conbo';
   }
 }
+// .wixTitle{
+//   display: grid;
+//   grid-template-columns: 3fr 1fr;
+//   padding: 1%;
+//   background-color: rgba(0, 0, 0, 0.093);
+// }
 .wixTitle{
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  padding: 1%;
-  background-color: rgba(0, 0, 0, 0.093);
+  margin: 0;
+  padding: 0;
+  background-size: cover;
+  background-position: center;
+  background-size: 110%;
+  background-repeat: no-repeat;
+ // background:radial-gradient(circle rgba(0,0,0,0),rgba(0,0,0,1));
 }
 .titleImg{
   width:100%
