--- a/views/wix-services.ejs
+++ b/views/wix-services.ejs
@@ -13,13 +13,13 @@
       <%let svcName = data[0][i].serviceName%>
       <%let svcNameSlice = svcName.slice(0,12)%>
 <div class="wixContainer">
-  <div class="wixTitle">
+  <div style="background-image: url('<%=data[0][i].imgName%>');" class="wixTitle">
     <%if(svcName.length>=13){%>
 <h1><%=svcNameSlice%>..</h1>
 <%}else{%>
 <h1><%=svcName%></h1>
   <%}%>
-<img class="titleImg" src="<%=data[0][i].imgName%>">
+
 </div>
 <h2>$<%=data[0][i].cost%>.00 | <%=data[0][i].terms%></h2>
 <p><%=data[0][i].serviceDetails%></p>
