--- a/public/stylesheets/main/style.scss
+++ b/public/stylesheets/main/style.scss
@@ -1035,7 +1035,14 @@ display:none;
 }
 
 .wixContainer{
-  border:1px solid black;
+  background-size: cover;
+  background-position: center;
+  background-size: 110%;
+  background-repeat: no-repeat;
+  background-color: #e5e5e5;
+  padding: 10px;
+  display: flex;
+  align-items: stretch;
   h2{
     font-family: 'kScript';
   }
@@ -1058,10 +1065,7 @@ display:none;
 .wixTitle{
   margin: 0;
   padding: 0;
-  background-size: cover;
-  background-position: center;
-  background-size: 110%;
-  background-repeat: no-repeat;
+
  // background:radial-gradient(circle rgba(0,0,0,0),rgba(0,0,0,1));
 }
 .titleImg{
