--- a/public/stylesheets/main/style.scss
+++ b/public/stylesheets/main/style.scss
@@ -1024,7 +1024,7 @@ display:none;
   border: inset 2px solid black;
   margin: 1px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns:1fr 1fr;
   grid-gap:2px;
   align-items: center;
   align-content: center;
