--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -1628,7 +1628,7 @@ th {
   border: inset 2px solid black;
   margin: 1px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 2px;
   align-items: center;
   align-content: center;
