--- a/public/stylesheets/main/style.scss
+++ b/public/stylesheets/main/style.scss
@@ -1023,11 +1023,14 @@ display:none;
 .wixGrid{
   border: inset 2px solid black;
   margin: 1px;
-  display: grid;
-  grid-template-columns:1fr 1fr;
-  grid-gap:2px;
-  align-items: center;
-  align-content: center;
+  // display: grid;
+  // grid-template-columns:1fr 1fr;
+  // grid-gap:2px;
+  // align-items: center;
+  // align-content: center;
+  width: 100%;
+  display: flex;
+  overflow-x: scroll;
   @media (max-width:768px) {
     grid-template-columns: 1fr;
     
@@ -1035,14 +1038,19 @@ display:none;
 }
 
 .wixContainer{
-  background-size: cover;
-  background-position: center;
-  background-size: 110%;
-  background-repeat: no-repeat;
-  background-color: #e5e5e5;
+  // background-size: cover;
+  // background-position: center;
+  // background-size: 110%;
+  // background-repeat: no-repeat;
+   background-color: #e5e5e5;
+  width: 100%;
+  white-space: nowrap;
+//  overflow-x: auto;
   padding: 10px;
-  display: flex;
-  align-items: stretch;
+  flex: 1;
+  // padding: 10px;
+  // display: flex;
+  // align-items: stretch;
   h2{
     font-family: 'kScript';
   }
@@ -1070,4 +1078,10 @@ display:none;
 }
 .titleImg{
   width:100%
+}
+.divider{
+  ::after{
+   min-height: 50px;
+    border-right:5px solid #FFD380 ;
+  }
 }
