--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -1627,11 +1627,9 @@ th {
 .wixGrid {
   border: inset 2px solid black;
   margin: 1px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 2px;
-  align-items: center;
-  align-content: center;
+  width: 100%;
+  display: flex;
+  overflow-x: scroll;
 }
 @media (max-width: 768px) {
   .wixGrid {
@@ -1640,14 +1638,11 @@ th {
 }
 
 .wixContainer {
-  background-size: cover;
-  background-position: center;
-  background-size: 110%;
-  background-repeat: no-repeat;
   background-color: #e5e5e5;
+  width: 100%;
+  white-space: nowrap;
   padding: 10px;
-  display: flex;
-  align-items: stretch;
+  flex: 1;
 }
 .wixContainer h2 {
   font-family: "kScript";
@@ -1669,6 +1664,11 @@ th {
 
 .titleImg {
   width: 100%;
+}
+
+.divider ::after {
+  min-height: 50px;
+  border-right: 5px solid #FFD380;
 }
 
 /*# sourceMappingURL=style.css.map */
