--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -1626,7 +1626,6 @@ th {
 
 .wixGrid {
   border: inset 2px solid black;
-  margin: 1px;
   width: 100%;
   display: flex;
   overflow-x: scroll;
@@ -1638,10 +1637,11 @@ th {
 }
 
 .wixContainer {
-  background-color: #e5e5e5;
-  width: 100%;
+  background-color: rgb(0, 0, 0);
+  width: 96%;
   white-space: nowrap;
-  padding: 10px;
+  padding: 2%;
+  margin: 1%;
   flex: 1;
 }
 .wixContainer h2 {
@@ -1650,7 +1650,6 @@ th {
 .wixContainer h1 {
   margin: 0;
   padding: 0;
-  color: black;
   font-family: "righteous";
 }
 .wixContainer p {
