--- a/views/wix-services.ejs
+++ b/views/wix-services.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body style="background-color: rgba(0,0,0,0); color: black;">
+<body style="background-color: rgba(0,0,0,0); color: rgb(255, 255, 255);">
 
   <div class="wixGrid">
     <%for(let i =0;i<data[0].length;i++){%>  
@@ -19,7 +19,7 @@
 
 </div>
 <h2 class="divider">$<%=data[0][i].cost%>.00</h2><h2><%=data[0][i].terms%></h2>
-
+<h3><%=data[0][i].serviceDetails%></h3>
 
 </div>
 <%}%>
