--- a/views/wix-services.ejs
+++ b/views/wix-services.ejs
@@ -13,7 +13,10 @@
 <%if(data[0][i].status=="show"){%>
       <%let svcName = data[0][i].serviceName%>
       <%let svcNameSlice = svcName.slice(0,21)%>
+
 <div class="wixContainer">
+  <div id="leadFade"></div>
+  <div id="endFade"></div>
   <div class="wixTitle">
   <h1><%=data[0][i].serviceName%></h1> 
 
