--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -320,7 +320,7 @@ h1 {
   font-size: 3rem;
   margin-bottom: 1px;
   font-family: "combo";
-  color: #dcf6ff;
+  color: white;
 }
 h1 .imgBox {
   width: 100%;
