--- a/public/stylesheets/main/style.scss
+++ b/public/stylesheets/main/style.scss
@@ -183,7 +183,7 @@ h1{
   font-size: 3rem;
   margin-bottom: 1px;
   font-family: $fontMain;
-  color:$accent;
+  color:white;
   @include mqs();
   
 }
