updated canvas bank data set, added migration

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -105,7 +105,11 @@
       </table>
      </div>
    </div>
-
+<div class="mainStyle">
+  <div class="eventBody">
+    <form action="/keysUpdateUtility"method="POST"><button type="submit"></button></form>
+  </div>
+</div>
 <div class="mainStyle">
 
 <!---->
