--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -29,7 +29,7 @@
 <table>
     <thead>           
        <th>date</th> 
-       <th>ammount</th> 
+       <th>amount</th> 
        <th>categorize</th> 
        <th>co invoiced</th> 
        <th>memo</th> 
