--- a/views/clientDashboard.ejs
+++ b/views/clientDashboard.ejs
@@ -34,7 +34,7 @@
   <br>
   <h1 class="logoFont">account activity</h1>
 
-  <h2>invoices</h2>
+  <h2><span style="background-color: black; color:crimson">**</span>invoices</h2>
   <table style="border:1px dotted white">
     <thead>
         <th>view invoice</th>
@@ -65,7 +65,7 @@
             </tbody>
             
         </table>
-        <h2>payments</h2>
+        <h2><span style="background-color: black; color:crimson">**</span>payments</h2>
         <table style="border:1px dotted white">
             <thead>
                
@@ -91,9 +91,15 @@
                 
               
                 
-                <h2 style="">Current Account Balance: $<%=dash[0].status.balance-paytotals%></h2><br>
+                <h2 style=""><span style="background-color: black; color:crimson">**</span>Current Account Balance: $<%=dash[0].status.balance-paytotals%></h2><br>
                 
-                
+
+<p style="background-color: black; color:crimson">**NOTICE: Our CU, CANVAS CREDIT UNION has undergone a major update to their websites and data: </p>
+<p style="background-color: black; color:crimson">**Some dashboard elements and payment histories in our transactions logs must be updated on our end: </p>
+<p style="background-color: black; color:crimson">**you may notice issues this month while we migrate our systems: </p>
+<p style="background-color: black; color:crimson">**contact scott directly for any details on your account: </p>
+<p style="background-color: black; color:crimson">**Sorry for any confusion this month!! 08-02-2023 </p>
+
 <p>a memo from scott: if you experience any trouble you may email me directly or open a ticket: <a href="/tickets">W2 Tickets</a>
 </p>
 
