--- a/views/dubSquaredMedia.ejs
+++ b/views/dubSquaredMedia.ejs
@@ -8,9 +8,9 @@
 </head>
 <body style="background-color: rgba(0,0,0,1); color: rgb(255, 255, 255);">
 
-  <div class="labGrid">
+  <div class="dubGrid">
     <%for(let i =0;i<data[0].length;i++){%>  
-<%if(data[0][i].status=="show" && data[0][i].serviceCategory=="theLab"){%>
+<%if(data[0][i].status=="show" && data[0][i].serviceCategory=="dubSquaredMedia"){%>
 
       <%let svcName = data[0][i].serviceName%>
       <%let svcNameSlice = svcName.slice(0,21)%>
